<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title_bar" 
        layout="@layout/title_bar"
        android:layout_alignParentTop="true"
        android:visibility="gone"/>
    <com.client.customerservicecenter.view.CustomScrollView
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/title_bar">
	    <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:paddingTop="8dip"
	    	android:paddingBottom="10dip"
	    	android:paddingLeft="15dip"
	    	android:paddingRight="15dip">
	    	<TextView 
	            android:layout_height="wrap_content"
	        	android:layout_width="wrap_content"
	        	android:textColor="@color/tip"
	        	android:textSize="@dimen/tip_text_size"
	        	android:text="@string/tip_description"
	            />
	        
	        <EditText 
	            android:id="@+id/description"
	            android:layout_height="wrap_content"
	        	android:layout_width="fill_parent"
	        	android:layout_marginTop="8dp"
	        	android:padding="10dip"
	        	android:hint="@string/hint_description"
	        	android:textSize="@dimen/hint_text_size"
	        	android:textColor="@color/text_normal"
	        	android:textColorHint="@color/text_hint"
	        	android:minHeight="100dp"
	        	android:maxLength="1000"
	        	android:gravity="top"
	        	android:background="@drawable/edittext_selector"
	            />
	        
	        <TextView 
	            android:layout_height="wrap_content"
	        	android:layout_width="wrap_content"
	        	android:layout_marginTop="8dp"
	        	android:textColor="@color/tip"
	        	android:textSize="@dimen/tip_text_size"
	        	android:text="@string/tip_pic"
	            />
	        
	        <RelativeLayout 
	            android:id="@+id/uploadPicParent"
	            android:layout_height="0dip"
	        	android:layout_width="fill_parent"
	        	android:layout_marginTop="8dp">
	            <ImageView 
	                android:id="@+id/arrow_left"
	                android:layout_height="fill_parent"
	        		android:layout_width="22dip"
	        		android:layout_alignParentLeft="true"
	                />
	            <ImageView 
	                android:id="@+id/arrow_right"
	                android:layout_height="fill_parent"
	        		android:layout_width="22dip"
	        		android:layout_alignParentRight="true"
	                />
	            
	            <LinearLayout 
	                android:id="@+id/scrollParent"
	                android:layout_height="fill_parent"
	        		android:layout_width="fill_parent"
	        		android:layout_toRightOf="@+id/arrow_left"
	        		android:layout_toLeftOf="@+id/arrow_right"
	        		android:orientation="horizontal"
	        		>
	            </LinearLayout>
	        </RelativeLayout>
	        
	        <TextView 
	            android:layout_height="wrap_content"
	        	android:layout_width="wrap_content"
	        	android:layout_marginTop="8dip"
	        	android:textColor="@color/text_normal"
	        	android:textSize="@dimen/small_text_size"
	        	android:text="@string/hint_pic"
	            />
	        
	        <TextView 
	            android:layout_height="wrap_content"
	        	android:layout_width="wrap_content"
	        	android:textColor="@color/tip"
	        	android:textSize="@dimen/tip_text_size"
	        	android:layout_marginTop="8dp"
	        	android:text="@string/tip_phone"
	            />
	        
	        <EditText 
	            android:id="@+id/phone"
	            android:layout_height="wrap_content"
	        	android:layout_width="fill_parent"
	        	android:layout_marginTop="8dp"
	        	android:padding="10dip"
	        	android:inputType="phone"
	        	android:hint="@string/hint_contact"
	        	android:textSize="@dimen/hint_text_size"
	        	android:textColor="@color/text_normal"
	        	android:textColorHint="@color/text_hint"
	        	android:maxLength="200"
	        	android:background="@drawable/edittext_selector"
	            />
	        
	        <TextView 
	            android:layout_height="wrap_content"
	        	android:layout_width="wrap_content"
	        	android:textColor="@color/tip"
	        	android:textSize="@dimen/tip_text_size"
	        	android:layout_marginTop="8dp"
	        	android:text="@string/tip_email"
	            />
	        
	        <EditText 
	            android:id="@+id/email"
	            android:layout_height="wrap_content"
	        	android:layout_width="fill_parent"
	        	android:layout_marginTop="8dp"
	        	android:padding="10dip"
	        	android:inputType="textEmailAddress"
	        	android:hint="@string/hint_contact"
	        	android:textSize="@dimen/hint_text_size"
	        	android:textColor="@color/text_normal"
	        	android:textColorHint="@color/text_hint"
	        	android:maxLength="200"
	        	android:freezesText="true"
	        	android:background="@drawable/edittext_selector"
	            />
	        
	        <Button 
	            android:id="@+id/submit"
	            android:layout_height="wrap_content"
	        	android:layout_width="fill_parent"
	        	android:gravity="center"
	        	android:text="@string/submit"
	        	android:textColor="@color/btn_selector"
	        	android:layout_marginTop="26dip"
	        	android:background="@drawable/btn_selector"/>
	      </LinearLayout>
      </com.client.customerservicecenter.view.CustomScrollView>
</RelativeLayout>