<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    >
    <ImageView 
        android:id="@+id/icon_repair_date"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentLeft="true"
    	android:layout_centerVertical="true"
    	android:src="@drawable/ic_repair_date"/>
    <LinearLayout 
        android:id="@+id/container_repair_date"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:gravity="center_vertical"
		android:layout_marginLeft="12dip"
		android:layout_toRightOf="@+id/icon_repair_date"
		android:layout_toLeftOf="@+id/activateCard"
		android:paddingTop="16dip"
		android:paddingBottom="16dip"
		android:orientation="vertical"
		>
        <TextView 
         	android:id="@+id/title_repair_date"
         	android:layout_width="match_parent"
 			android:layout_height="0dip"
 			android:gravity="center_vertical"
 			android:textSize="16sp"
 			android:textColor="@color/text_color_primary"
 			android:text="@string/title_repair_date"
 			android:layout_weight="1"
        />
        <TextView 
         	android:id="@+id/summary_repair_date"
         	android:layout_width="match_parent"
 			android:layout_height="0dip"
 			android:textSize="@dimen/small_text_size"
 			android:textColor="@color/text_color_summary"
 			android:text="@string/summary_repair_date"
 			android:maxLines="1"
 			android:ellipsize="end"
 			android:gravity="center_vertical"
 			android:layout_weight="1"
        />
    </LinearLayout>
    
    <TextView 
        android:textSize="@dimen/text_size_summary" 
        android:textColor="@color/btn_selector"
        android:id="@+id/activateCard" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/activate" 
        android:layout_alignParentRight="true" 
        android:layout_centerVertical="true" 
        android:textIsSelectable="false"
        android:gravity="center"
        android:padding="2dip"
        android:visibility="visible" 
        android:background="@drawable/button_selector"/>
    
    <ImageView 
        android:id="@+id/divider"
        android:layout_width="match_parent"
		android:layout_height="0.67dp"
		android:background="@drawable/divider_horizontal_dark"
		android:layout_below="@+id/container_repair_date"
        />
</RelativeLayout>
