<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <include
      	android:id="@+id/title_bar" 
      	layout="@layout/title_bar"/>

    <com.client.customerservicecenter.widget.sup.SlidingUpPanelLayout
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:panelHeight="@dimen/panel_height"
        sothree:shadowHeight="0dp"
        sothree:paralaxOffset="100dp"
        sothree:dragView="@+id/follow">
    
        <!-- SLIDING Content -->
	    <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:paddingTop="12dip"
	    	android:paddingBottom="4dip"
	    	android:paddingLeft="12dip"
	    	android:paddingRight="12dip"
	    	android:orientation="vertical">
	        <ImageView 
		        android:id="@+id/contactUs"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:src="@drawable/ic_call_us_selector"
	        />
	        
	        <LinearLayout 
	            android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:orientation="vertical"
		        android:layout_marginTop="12dip">
	            <TextView 
	                android:layout_height="wrap_content"
		        	android:layout_width="fill_parent"
		        	android:textColor="@color/tip"
	        		android:textSize="@dimen/tip_text_size"
		        	android:paddingTop="4dip"
		        	android:paddingBottom="4dip"
		        	android:text="@string/label_location"
	                />
	            <TextView 
			        android:layout_width="match_parent"
					android:layout_height="1dip"
					android:background="@drawable/divider_horizontal_dark"
	        	/>
	        </LinearLayout>
	        
	        <RelativeLayout 
	            android:layout_height="wrap_content"
		        android:layout_width="fill_parent">
	            <Switch 
	                android:id="@+id/switch_"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
	    			android:layout_centerVertical="true"
					android:track="@drawable/switch_track_selector"
					android:thumb="@drawable/switch_inner_selector"
					android:thumbTextPadding="@dimen/switch_thumb_text_padding"
					android:switchMinWidth="@dimen/switch_min_width"
					android:switchPadding="@dimen/switch_padding_default"
					android:switchTextAppearance="@android:style/TextAppearance.Holo.Small"
					android:textOn="@string/empty"
					android:textOff="@string/empty"
					android:focusable="false" />
	            
	            <LinearLayout 
			        android:id="@+id/container_imei"
			        android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:gravity="center_vertical"
					android:layout_marginRight="6dip"
					android:layout_toLeftOf="@+id/switch_"
					android:paddingTop="8dip"
					android:paddingBottom="8dip"
					android:orientation="vertical"
					>
			        <TextView 
			         	android:id="@+id/title_gps"
			         	android:layout_width="match_parent"
			 			android:layout_height="wrap_content"
			 			android:gravity="center_vertical"
			 			android:textSize="@dimen/large_text_size"
			 			android:textColor="@color/text_color_primary"
			 			android:text="@string/title_gps"
			 			android:layout_weight="1"/>
			        <TextView 
			         	android:id="@+id/summary_gps"
			         	android:layout_width="match_parent"
			 			android:layout_height="0dip"
			 			android:textSize="@dimen/text_size_summary"
			 			android:maxLines="1"
		 				android:ellipsize="end"
			 			android:textColor="@color/text_color_summary"
			 			android:gravity="center_vertical"
			 			android:text="@string/summary_gps"
			 			android:layout_weight="1"/>
	    		</LinearLayout>
	        </RelativeLayout>
	        
	        <LinearLayout 
	            android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:orientation="vertical">
	            <TextView 
	                android:layout_height="wrap_content"
		        	android:layout_width="fill_parent"
		        	android:textColor="@color/tip"
	        		android:textSize="@dimen/tip_text_size"
		        	android:paddingTop="4dip"
		        	android:paddingBottom="4dip"
		        	android:text="@string/label_near_by_serviceoutlets"
	                />
	            <TextView 
			        android:layout_width="match_parent"
					android:layout_height="1dip"
					android:background="@drawable/divider_horizontal_dark"
	        	/>
	        </LinearLayout>
	        
	        <ListView
	            android:id="@+id/city_list"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:cacheColorHint="#00000000"
	            android:fadingEdge="none"
	            android:scrollbars="none" 
	            android:divider="@null"
            	android:dividerHeight="0dip"
            	android:visibility="invisible"/>
	    </LinearLayout>
	    
	     <!-- SLIDING LAYOUT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/panel_height">
				<Button
                    android:id="@+id/follow"
                    android:layout_width="38dip"
                    android:layout_height="38dip"
                    android:gravity="center_vertical|right"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/location_query_selector"
                    />
				<TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="20dip"
                    android:textSize="@dimen/small_text_size"
                    android:layout_below="@+id/follow"
                    android:gravity="center"
                    android:text="@string/label_serviceoutlets"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>
            
            <FrameLayout 
                android:layout_width="match_parent"
				android:layout_height="match_parent">
	            <com.client.customerservicecenter.widget.sgh.StickyGridHeadersGridView 
				    android:id="@+id/asset_grid"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:clipToPadding="false"
				    android:numColumns="4"
				    android:padding="16dp"
				    android:visibility="invisible"/>
	            <RelativeLayout 
	                android:layout_width="match_parent"
					android:layout_height="match_parent">
	                <ImageView 
				        android:id="@+id/anim"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:src="@drawable/progress"
				        android:layout_centerInParent="true"
				        android:visibility="gone"/>
	            </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </com.client.customerservicecenter.widget.sup.SlidingUpPanelLayout>
</LinearLayout>