<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:paddingTop="6dip"
    android:paddingRight="10dip"
    android:orientation="vertical">
    
    <RelativeLayout 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingLeft="16dip"
        android:paddingRight="5dip">
        <EditText
	        android:id="@+id/search_feedback"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:drawableLeft="@drawable/search_feedback_icon"
	        android:paddingLeft="12dip"
	        android:paddingRight="34dip"
	        android:paddingTop="2dip"
	        android:paddingBottom="2dip"
	        android:drawablePadding="8dip"
	        android:hint="@string/hint_search"
	       	android:textSize="@dimen/hint_text_size"
	       	android:textColor="@color/text_normal"
	       	android:textColorHint="@color/text_hint"
	       	android:ellipsize="start"
	       	android:maxLines="1"
	        android:background="@drawable/search_feedback_selector"
        />

        <ImageView
            android:id="@+id/delete_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:visibility="gone"
            android:src="@drawable/ic_delete_selector" />

    </RelativeLayout>
    <FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginTop="12dip">

    	<LinearLayout 
    	    android:id="@+id/list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
	        <FrameLayout 
	            android:layout_width="match_parent"
	            android:layout_height="0px"
	            android:layout_weight="1">
	            <ListView android:id="@+id/list"
	                android:drawSelectorOnTop="false"
	                android:cacheColorHint="#00000000"
	            	android:fadingEdge="none"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:divider="@null"
	                android:scrollbars="none"/>
	            <TextView android:id="@+id/empty"
	                    android:layout_width="match_parent"
	                    android:layout_height="match_parent"
	                    android:gravity="center"
	                    android:text="@string/tip_noData" />
	        </FrameLayout>
    	</LinearLayout>
    
	    <LinearLayout android:id="@+id/loading_container"
	            android:orientation="vertical"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:gravity="center">
	        <ProgressBar style="?android:attr/progressBarStyleLarge"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" />
	        <TextView 
	            	android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:text="@string/tip_loading"
	                android:paddingTop="4dip"
	                android:singleLine="true" />
	    </LinearLayout>
	</FrameLayout>
    
</LinearLayout>